--- a/style.css
+++ b/style.css
@@ -3,20 +3,35 @@
     margin: 1px;
     padding: 0;
     box-sizing: border-box;
+    /* color: white; */
     font-family: "poppins";
 }
-body
+body 
 {
-    /* display: flex; */
+    background: linear-gradient(-45deg, #ff6600, #ffcc00, #ff6699, #cc99ff);
+    display: flex;
     justify-content: center;
     align-items: center;
     min-height: 80vh;
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 .page-header
 {
-    /* width: 1236px; */
-    height: 515px;
     top: -358px;
     left: 1496px;
     border: 2px solid black;
@@ -41,11 +56,39 @@ body
 
 .cat
 {
-    padding-top: 24px;
+    padding-top: 12px;
 }
 
 .write
 {
-    padding-top: 20px;
+    margin: 10px;
+    margin-left: 15px;
     font-size: x-large;
+}
+
+.img-div
+{
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.title
+{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+.img-dev
+{
+    width: 35%;
+}
+
+.description
+{
+    display: flex;
+    justify-content: center;
+    padding: 0px 250px 0px 250px;
+    text-align: center;
 }
