--- a/style.css
+++ b/style.css
@@ -9,13 +9,12 @@
 body 
 {
     background: linear-gradient(-45deg, #ff6600, #ffcc00, #ff6699, #cc99ff);
-    display: flex;
     justify-content: center;
     align-items: center;
     min-height: 80vh;
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
-	height: 100vh;
+	/* height: 100vh; */
 }
 
 @keyframes gradient {
@@ -34,7 +33,8 @@ body
 {
     top: -358px;
     left: 1496px;
-    border: 2px solid black;
+    /* border: 2px solid black; */
+    margin-bottom: 20px;
 }
 
 .top-header
@@ -43,7 +43,7 @@ body
     display: flex;
     justify-content: space-between;
     margin: 14px 50px 0px 50px;
-    border: 2px solid black;
+    border: 1.8px solid black;
 }
 
 .words
@@ -92,3 +92,27 @@ body
     padding: 0px 250px 0px 250px;
     text-align: center;
 }
+
+.chapiter-title
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1.6px solid black;
+    margin: 15px 25%;
+}
+
+.chapiter-text
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 15px 25%;
+    text-align: center;
+}
+
+.minilibx-video
+{
+    text-align: center;
+}
+
