--- a/style.css
+++ b/style.css
@@ -1,9 +1,38 @@
+.desktop-message 
+{
+    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40%;
+    border: 1.6px solid black;
+    border-radius: 5px;
+    background-color: rgb(255, 175, 244);
+}
+
+.content
+{
+    display: none;
+}
+
+@media (min-width: 683px) 
+{
+  .desktop-message 
+  {
+    display: none;
+  }
+
+  .content 
+  {
+    display: block;
+  }
+}
+
 *
 {
     margin: 1px;
     padding: 0;
     box-sizing: border-box;
-    /* color: white; */
     font-family: "poppins";
 }
 body 
@@ -14,7 +43,6 @@ body
     min-height: 80vh;
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
-	/* height: 100vh; */
 }
 
 @keyframes gradient {
@@ -33,7 +61,6 @@ body
 {
     top: -358px;
     left: 1496px;
-    /* border: 2px solid black; */
     margin-bottom: 20px;
 }
 
@@ -89,30 +116,36 @@ body
 {
     display: flex;
     justify-content: center;
-    padding: 0px 250px 0px 250px;
+    margin: 15px;
     text-align: center;
 }
 
 .chapiter-title
 {
     display: flex;
+    min-width: 100px;
     align-items: center;
     justify-content: center;
     border: 1.6px solid black;
-    margin: 15px 25%;
+    margin: 15px 26%;
 }
+
 
 .chapiter-text
 {
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin: 15px 25%;
+    margin: 15px;
     text-align: center;
 }
 
 .minilibx-video
 {
     text-align: center;
+}
+
+.fractal-img
+{
+    margin-top: 15px;
 }
 
