--- a/style.css
+++ b/style.css
@@ -37,12 +37,14 @@
 }
 body 
 {
-    background: linear-gradient(-45deg, #ffffff, #e7d485, #c04970, #969696);
-    justify-content: center;
+  background: rgb(255,250,0);
+  background: linear-gradient(0deg, rgba(255,250,0,1) 0%, rgba(255,255,255,1) 100%);    justify-content: center;
     align-items: center;
     min-height: 80vh;
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
+  border: 1.5px solid black;
+  border-radius: 10px;
 }
 
 @keyframes gradient {
@@ -78,13 +80,15 @@ body
 {
     display: flex;
     justify-content: space-between;
-    width: 20%;
+    /* width: 40%; */
     margin-right: 10px;
 }
 
 .cat
 {
-    padding-top: 12px;
+  margin-right: 10px;
+  padding-top: 12px;
+  color: black;
 }
 
 .write
@@ -100,6 +104,11 @@ body
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.link
+{
+  color: black;
 }
 
 .title
@@ -127,8 +136,9 @@ body
     min-width: 100px;
     align-items: center;
     justify-content: center;
-    border: 1.6px solid black;
-    border-radius: 10px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    /* border-radius: 10px; */
     margin: 15px 26%;
 }
 
@@ -151,19 +161,20 @@ body
     margin-top: 15px;
 }
 
-.main {
+.main 
+{
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   border: 1.9px solid black;
   /* background-color: white; */
-  border-radius: 90px;
-  margin: 0px 25%;
+  border-radius: 15px;
+  margin: 0px 32%;
   padding-bottom: 7px;
   margin-bottom: 10px;
   flex-direction: column;
-  gap: 0.5em;
+  /* gap: 0.5em; */
 }
 
 .up {
@@ -180,68 +191,74 @@ body
 
 .card1 {
   width: 90px;
-  height: 90px;
+  height: 40px;
   outline: none;
   border: 1px solid black;
   background: transparent;
-  border-radius: 90px 5px 5px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px 5px 5px 5px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   transition: .2s ease-in-out;
 }
 
-.instagram {
-  margin-top: 1.5em;
-  margin-left: 1.2em;
+.instagram 
+{
   fill: #cc39a4;
 }
 
 .card2 {
   width: 90px;
-  height: 90px;
+  height: 40px;
   outline: none;
   border: 1px solid black;
   background: transparent;
-  border-radius: 5px 90px 5px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px 5px 5px 5px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   transition: .2s ease-in-out;
 }
 
 .facebook {
-  margin-top: 1.5em;
-  margin-left: -.9em;
+
   fill: #4303f4;
 }
 
 .card3 {
   width: 90px;
-  height: 90px;
+  height: 40px;
   outline: none;
   border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: transparent;
-  border-radius: 5px 5px 5px 90px;
+  border-radius: 5px 5px 5px 5px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   transition: .2s ease-in-out;
 }
 
-.github {
-  margin-top: -.6em;
-  margin-left: 1.2em;
-}
 
 .card4 {
   width: 90px;
-  height: 90px;
+  height: 40px;
   outline: none;
   border: 1px solid black;
   background: transparent;
-  border-radius: 5px 5px 90px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px 5px 5px 5px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   transition: .2s ease-in-out;
 }
 
 .linkedin {
-  margin-top: -.9em;
-  margin-left: -1.2em;
+  /* margin-top: -.9em;
+  margin-left: -1.2em; */
   fill: #0026ff;
 }
 
